✨ refactor(capabilities): Use Collections.singletonList for capability lists
Replaces List.of with Collections.singletonList for returning single capability types in various capability resolvers. This is a minor optimization and consistency improvement.

Also adds a dependency for CandyCraft.